--- a/templates/httpdconfcentos6.erb
+++ b/templates/httpdconfcentos6.erb
@@ -196,7 +196,9 @@ LoadModule env_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_e
 LoadModule ext_filter_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_ext_filter.so
 LoadModule mime_magic_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_mime_magic.so
 LoadModule expires_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_expires.so
+<%- if(@deflate) -%>
 LoadModule deflate_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_deflate.so
+<%- end -%>
 LoadModule headers_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_headers.so
 LoadModule setenvif_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_setenvif.so
 LoadModule mime_module <%= scope.lookupvar('apache::params::modulesdir') %>/mod_mime.so
